fix flicker bug

--- a/src/components/ForgotPassword/ResetPassword/index.module.scss
+++ b/src/components/ForgotPassword/ResetPassword/index.module.scss
@@ -5,6 +5,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .cardLogin {
